gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15399.d
version https://git-lfs.github.com/spec/v1
oid sha256:8cc909ec49059fe93ffc4a5b1b73814efecfdff6efd13801f5fc854f43237b0e
size 1383
